--- a/Vue_CICD_Demo/index.html
+++ b/Vue_CICD_Demo/index.html
@@ -7,8 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    Hello, 这里是MOSS团队的CI/CD测试项目
+    Hello, 这里是MOSS团队的CI/CD测试项目<br/>
 
-    Hi，我是于敬凯，这是我触发的CI/CD
+    Hi，我是于敬凯，这是我触发的CI/CD<br/>
   </body>
 </html>
