--- a/Vue_CICD_Demo/index.html
+++ b/Vue_CICD_Demo/index.html
@@ -13,5 +13,6 @@
     Hi，我是史泽宇，这是我触发的CI/CD<br/>
     Hi，我是王小鸽，这是我触发的CI/CD<br/>
     Hi, 我是叶颜函，这是我触发的CI/CD<br/>
+    Hi, 我是王雪竹，这是我触发的CI/CD<br/>
   </body>
 </html>
